# stocksi-mobile

./: .gitignore  .gitlab-ci.yml  APPSTORE_PRIVACY_ANSWERS.md  APPSTORE_RELEASE_JOURNAL.md  APPSTORE_SUBMIT_CHECKLIST.md  CLAUDE.md  Cargo.toml  DATA_SAFETY.md  IOS_SIGNING_SETUP.md  PRIVACY-tilda.html  PRIVACY.md  README.md  RUSTORE_LISTING.md  STORE_LISTING.md  STORE_LISTING_APPSTORE.md
.github/workflows/: ios-build.yml  ios-release.yml
flutter-app/: README.md  pubspec.yaml
flutter-app/android/: build.gradle.kts
flutter-app/android/app/: build.gradle.kts
flutter-app/cert/: generate.ps1  stocksi.cer
flutter-app/ios/: ExportOptions.plist
flutter-app/ios/Runner/: Info.plist  PrivacyInfo.xcprivacy
flutter-app/ios/Runner.xcodeproj/: project.pbxproj
flutter-app/lib/: main.dart
flutter-app/lib/state/: auth_provider.dart  background_service.dart  news_provider.dart  notification_service.dart  sentry_setup.dart  sound_service.dart  text_highlight.dart  (+4 more)
flutter-app/rust/: Cargo.toml
flutter-app/rust/src/: frb_generated.rs
flutter-app/rust/src/api/: simple.rs
flutter-app/rust_builder/: pubspec.yaml
flutter-app/test/: widget_test.dart
flutter-app/windows/: CMakeLists.txt
rust-core/: Cargo.toml
rust-core/examples/: smoke.rs  ws_test.rs
rust-core/src/: api.rs  icons.rs  lib.rs
rust-core/src/filters/: mod.rs
rust-core/src/storage/: mod.rs  sqlite.rs
rust-core/src/types/: mod.rs  news.rs  server.rs  settings.rs
rust-core/src/websocket/: client.rs  mod.rs
scripts/: generate_icons.py  icon.html  icon_fg.html  make_appstore_screenshots.py
(+31 files in other folders)
