[package]
name = "rust_lib_stocksi_mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
stocksi_core = { path = "../../rust-core" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
anyhow = "1"
async-stream = "0.3"
futures = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
